fix: error message alignment with title

--- a/frontend/app/block/block.scss
+++ b/frontend/app/block/block.scss
@@ -356,6 +356,7 @@
                             max-height: 80px;
                             border-radius: 8px;
                             padding: 5px;
+                            padding-left: 0;
                             position: relative;
 
                             .copy-button {
